# renvsubst

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: envsubst.rs  main.rs
