[package]
name = "cnx-renvsubst"
version = "0.1.3"
authors = [
    "FujiHaruka <fujiharuka@realglobe.jp>",
    "CompileNix"
]
keywords = ["envsubst", "template"]
license-file = "LICENSE"
readme = "README.md"
description = "Substitution like envsubst, but can escape."
documentation = "https://git.compilenix.org/CompileNix/renvsubst"

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
regex = "0.2"
uuid = { version = "0.4", features = ["v4"] }
