[package]
name = "cnx-renvsubst"
version = "0.1.3"
authors = [
    "FujiHaruka <fujiharuka@realglobe.jp>",
    "CompileNix"
]
keywords = ["envsubst", "template"]
license-file = "LICENSE"
readme = "README.md"
description = "Env substitution, just like envsubst"
documentation = "https://git.compilenix.org/CompileNix/renvsubst"
edition = "2021"

[profile.release.package."*"]
opt-level = "s"
codegen-units = 1
strip = true

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
regex = { version = "1.7.1", features = ["std"], default-features = false }

