[package]
name = "cnx-renvsubst"
version = "0.1.4"
authors = [
    "FujiHaruka <fujiharuka@realglobe.jp>",
    "CompileNix"
]
keywords = ["envsubst", "template"]
license-file = "LICENSE"
readme = "README.md"
description = "Env substitution, just like envsubst"
documentation = "https://git.compilenix.org/CompileNix/renvsubst"
edition = "2021"

[dependencies]
regex = { version = "1.7.1", features = ["std"], default-features = false }

